Replaced svg with png for mobile functionality.

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -41,7 +41,7 @@
 <section id="head">
   <div class="bg-head"></div>
   <img class="dog-head" src="/assets/animateDog.png">
-  <img class="logo-head" src="/assets/animateLogo.svg">
+  <img class="logo-head" src="/assets/animateLogo.png">
 </section>
 
 <section id="calendar">
@@ -191,7 +191,7 @@
 <section id="head">
   <div class="bg-head"></div>
   <img class="dog-head" src="/assets/animateDog.png">
-  <img class="logo-head" src="/assets/animateLogo.svg">
+  <img class="logo-head" src="/assets/animateLogo.png">
   <div class="load-not">
     <p>Login or Sign Up to begin!</p>
   </div>
