Removed unnecessary code.

--- a/views/partials/petaddList.hbs
+++ b/views/partials/petaddList.hbs
@@ -1,5 +1,4 @@
-{{!-- Contacts List --}}
-<div class="messageContainer"></div>
+{{!-- Pet List --}}
 {{#if petsExist}}
 {{#each pets}}
 <div class="col-lg-4 col-xs-12 carded-inner">
