--- a/views/partials/reminderList.hbs
+++ b/views/partials/reminderList.hbs
@@ -1,5 +1,4 @@
-{{!-- Contacts List --}}
-<div class="messageContainer"></div>
+{{!-- Reminder List --}}
 {{#if remindersExist}}
 {{#each reminders}}
 <div class="col-lg-4 col-xs-12 carded-inner">
